# Thematic-Alignment

./: .gitignore  README.md  pyproject.toml
data/: plos_computational_biology_raw_papers.csv
note_books/: alignment_analysis.ipynb  embedding.ipynb  paper_collection.ipynb
thematic_alignment/: __init__.py  alignment.py  analysis.py  data_loader.py  embedding.py
